@@ -130,7 +130,7 @@ Files: filter/getline.c
 Copyright: 1993, 1996-2014, Free Software Foundation, Inc
 License: GPL-2+
 
-Files: ppd/pxlcolor.ppd ppd/pxlmono.ppd
+Files: ppdfiles/pxlcolor.ppd ppdfiles/pxlmono.ppd
 Copyright: 2001-2005 Easy Software Products
 License: GPL-2+
 
@@ -156,7 +156,7 @@ Copyright: 2012 Tobias Hoffmann
  2006-2011, BBR Inc
 License: Expat
 
-Files: ppd/*-PDF.ppd
+Files: ppdfiles/*-PDF.ppd
 Copyright: 2012-2016 Till Kamppeter
 License: GPL-2+
 
